# webrtcaudioprocessing

./: .gitignore  meson.build  relocatedev
pkgconfig/: webrtc.pc
pkgconfig/mac/: webrtc.pc
pkgconfig/silicon/: webrtc.pc
pkgconfig/windows/: webrtc.pc
plugin/: meson.build
plugin/src/: gstwebrtcaudioprobe.cpp  gstwebrtcaudioprobe.h  gstwebrtcaudioprocessor.cpp  gstwebrtcaudioprocessor.h
plugin/src/gst/webrtcaudioprocessing/: gstwebrtcaudioprobe.h  gstwebrtcaudioprocessor.h
